# Forge

./: .gitignore  .lastgate.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  render.yaml  setup.sh
.github/: dependabot.yml
backend/: .env.example  Dockerfile  conftest.py  requirements-dev.txt  requirements.txt
cli/: pyproject.toml
cli/agentforge/: __init__.py  client.py  config.py  main.py
cli/forge/: __init__.py  client.py  config.py  main.py  mcp_server.py
cli/forge/commands/: auth.py  chat.py  connections.py  evals.py  marketplace.py  ops.py  settings.py  studio.py  system.py  workflows.py
cli/tests/: test_cli.py  test_config_round_trip.py  test_forge_map.py  test_mcp_server.py  test_ops_kanban_parity.py  test_workspace_aliases.py
docs/: api-surface.txt  computer-use-testing-report.md  forge-v3-audit-and-phase9.md  harness-cutover-qa.md  harness-plan.md  mcp-server.md  qa-summary.md  security-report.md  sibling-audit.md  surface-audit.md  test-report.md  user-testing-report.md  web-cli-parity.md
forge-kernel/: README.md  pyproject.toml
forge-kernel/demo/: standalone_agent.py
forge-kernel/forge_kernel/: __init__.py  convert.py  loop.py  models.py  serialize.py  types.py
frontend/: .env.check  .env.example  .env.vercel  .gitignore  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
qa-evidence/: findings.md
scripts/: bootstrap-macos.sh  bootstrap-verify.sh  drive  ocr-helper  ocr-helper.swift  steer  (+2 more)
(+392 files in other folders)
