[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-cli"
version = "1.0.0"
description = "CLI client for Forge — AI workflow agent platform"
readme = "../README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
forge = "forge.main:app"

[tool.hatch.build.targets.wheel]
packages = ["forge"]
